--- a/hacking.html
+++ b/hacking.html
@@ -47,14 +47,16 @@
 			
 		</section>
 
+
 		<footer class="rodape">
 			
 			<!-- REDIRECTS TO OMBUDSMAN] SUBSTITUIR POR ICONES-->
 			<div class="background">
 				<div class="footer-align">
-					
+
 					<div class="footer-left">
-						&copy;Copyright&nbsp;2018 by Bonieck Douglas 
+						&copy;Copyright&nbsp;2018 by Bonieck Douglas&nbsp;
+						<hr>
 					</div>
 
 					<div class="footer-left">
